# qtaudiosource

./: CMakeLists.txt  audiorecorder.cpp  audiorecorder.h  audiosource.cpp  audiosource.h  pyproject.toml  qt_audio_monitor_pull.py  qt_audio_monitor_push.py  qt_audiosource_611.py  readme.md
doc/src/: audiosource.qdoc
src/audiosource/: audiorecorder.h  audiosource.h
src/pyvrp/: __main__.py  gridcanvas.py  pyvrp.py
